# python-templ

./: .deepsource.toml  README.md  pyrightconfig.json  setup.cfg
.github/: dependabot.yml
.github/flake8/: action-critical.ini  action.ini
.github/workflows/: lint.yml  pr_lint.yml
