[metadata]
name = python-templ
author = jnooree
author_email = jnooree@snu.ac.kr
version = attr: project.__version__
url = https://github.com/jnooree/python-templ
description = Template for python projects
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
# Until 2024-10-14
python_requires = >=3.8

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
# 	executable = package.module:function

[flake8]
max-line-length = 79
ignore = E266,E4,E74,F403,F405,W503
per-file-ignores =
	# imported but unused
	__init__.py: F401
extend-exclude = .github/**,build/**,dist/**,*.pyc
